err/django-start.err
Listing '.'...
Listing './bin'...
Compiling './bin/django-start.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_start'...
Listing './lib/python3.5/site-packages/django_start/management'...
Compiling './lib/python3.5/site-packages/django_start/management/base.py'...
***   File "./lib/python3.5/site-packages/django_start/management/base.py", line 136
    except CommandError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_start/management/commands'...
Listing './lib/python3.5/site-packages/django_start/templates'...
Listing './lib/python3.5/site-packages/django_start/templates/app'...
Listing './lib/python3.5/site-packages/django_start/templates/app/blog'...
Listing './lib/python3.5/site-packages/django_start/templates/app/blog/apps'...
Listing './lib/python3.5/site-packages/django_start/templates/app/blog/apps/features'...
Listing './lib/python3.5/site-packages/django_start/templates/app/blog/apps/fixtures'...
Compiling './lib/python3.5/site-packages/django_start/templates/app/blog/django_start_settings.py'...
***   File "./lib/python3.5/site-packages/django_start/templates/app/blog/django_start_settings.py", line 55
    print "Application %s created. To activate:" % replace['XXXMODEL_NAMEXXX']
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_start/templates/app/blog/templates'...
Listing './lib/python3.5/site-packages/django_start/templates/project'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/deploy'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/deploy/requirements'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/apps'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/apps/ff0000'...
Compiling './lib/python3.5/site-packages/django_start/templates/project/basic/project/apps/ff0000/models.py'...
***   File "./lib/python3.5/site-packages/django_start/templates/project/basic/project/apps/ff0000/models.py", line 25
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/settings'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/static'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/static/css'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/static/js'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/static-local'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/static-local/admin'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/templates'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/project/templates/admin'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/resources'...
Listing './lib/python3.5/site-packages/django_start/templates/project/basic/uploads'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/deploy'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/deploy/requirements'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/apps'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/apps/ff0000'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/settings'...
Compiling './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/settings/__init__.py'...
***   File "./lib/python3.5/site-packages/django_start/templates/project/ff0000/project/settings/__init__.py", line 184
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/static'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/static-local'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/static-local/admin'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/templates'...
Listing './lib/python3.5/site-packages/django_start/templates/project/ff0000/project/templates/admin'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/docs'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/apps'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/bin'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/conf'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/conf/common'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/conf/dev'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/conf/local'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/conf/test'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/static'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/myproject/templates'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/server_configs'...
Listing './lib/python3.5/site-packages/django_start/templates/project/lincolnloop/server_configs/dev'...
Listing './lib/python3.5/site-packages/django_start-0.1.22.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
